spade-tests/src/snapshots/spade_tests__ast_lowering__unit_param_defaults_must_be_packed_at_the_end.snap
---
source: spade-tests/src/ast_lowering.rs
---
extern fn f<#uint N = 1, #uint M, #uint O = 2>() -> (T, U, V);


error: Generic parameters with a default must be trailing
  ┌─ testinput:1:12
  │
1 │ extern fn f<#uint N = 1, #uint M, #uint O = 2>() -> (T, U, V);
  │            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │              │
  │              This parameter has a default and is not trailing
